# genj

./: .gitignore  BUILD_SCRIPTS.md  Cargo.toml  LICENSE  README.md  README_fr.md  build-release-full.ps1  build-release-full.sh  build-release.ps1  build-release.rs  build-release.sh  build.rs  build_deb.sh  genj_1.2_amd64.deb
.github/: FUNDING.yml
docs/: ARCHITECTURE.md  MANUAL.md  TEMPLATES.md  genj.metainfo.xml
docs/man/man1/: genj.1
docs/man/man5/: genj-template.5
src/: add-vscode-pjr.sh  cli.rs  fs.rs  genrc.rs  lib.rs  log.rs  main.rs  template.rs  vscode_git.rs
templates/basic-game-java/: .sdkmanrc  .template
templates/basic-java/: .template  LICENSE
templates/basic-java/src/main/java/${PACKAGE}/: ${MAINCLASS}.java
templates/basic-java/src/main/resources/: config.properties
templates/basic-java/src/main/resources/i18n/: messages.properties
templates/basic-java/src/resources/: config.properties
templates/game-fps/: .template  README.md
templates/game-fps/src/main/java/${PACKAGE}/: ${MAINCLASS}.java
templates/game-fps/src/test/java/${PACKAGE}/: EntityTest.java
templates/java-basic-game/: .template  build
templates/java-basic-game/src/main/resources/: config.properties
templates/java-basic-game/src/main/resources/i18n/: messages.properties
templates/java-game-fps/: .template
templates/java-game-fps/src/docs/: 00-preface.md  01-the-entity-class.md
templates/java-game-fps/src/main/java/${PACKAGE}/: ${MAINCLASS}.java
